syntax = "proto3";

package warns;

import "common/types.proto";
import "users/service.proto";
import "google/protobuf/timestamp.proto";

option go_package = "./warns"; // для компилятора Go

service Warns {
    // insert in table Warns
    rpc Create(CreateIn) returns (CreateFailure);

    // update warns for this user IsActive=false, insert in table Bans, query to service users for update role -> banned
    rpc Ban(users.Id) returns (BanFailure);

    // update ban for this user IsActive=false, query to service users for update role -> user
    rpc Unban(users.Id) returns (common.Response);
}

message Warn {
    int64 Id = 1;
    int64 UserId = 2;
    int64 ModerId = 3;
    string Reason = 4;
    google.protobuf.Timestamp IssuedAt = 5;
    bool IsActive = 6;
}

message Ban {
    int64 Id = 1;
    int64 UserId = 2;
    int64 ModerId = 3;
    string Reason = 4;
    google.protobuf.Timestamp IssuedAt = 5;
    bool IsActive = 6;
}

message CreateIn {
    int64 UserId = 1;
    int64 ModerId = 2;
    optional string Reason = 3;
}

message CreateFailure {
    optional Warn warn = 1;
    optional common.Failure failure = 2;
}

message BanFailure {
    optional Ban ban =1 ;
    optional common.Failure failure = 2;
}